--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Background Generator</h1>
+    <h1>Background Generator!</h1>
     <script src="script.js"></script>
   </body>
 </html>
